--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -1,17 +1,17 @@
-# Build Docker image for this app using Azure Pipelines
-# http://docs.microsoft.com/azure/devops/pipelines/languages/docker?view=vsts
+trigger:
+- master
+
 pool:
   vmImage: 'Ubuntu 16.04'
 
 variables:
   buildConfiguration: 'Release'
   imageName: 'dotnetcorehelloworld:$(Build.BuildId)'
-  # define two more variables dockerId and dockerPassword in the build pipeline in UI
 
 steps:
 - script: |
     dotnet build --configuration $(buildConfiguration)
-    dotnet test dotnetcore-tests --configuration $(buildConfiguration) --logger trx
+    dotnet test dotnetcore-tests --configuration $(buildConfiguration) --logger trx --collect "Code coverage"
     dotnet publish --configuration $(buildConfiguration) --output out
     docker build -f Dockerfile -t $(dockerId)/$(imageName) .
     docker login -u $(dockerId) -p $pswd
